# codegen-example

./: .clang-format  CMakeLists.txt  codegenerator.cpp  main.cpp
non-generated/: non-generated.hpp
